test/scc/expr/semantic-errors/165.t
struct
{
	int a, b;
} c[3] = { [2].b = 2, 3 };